cmake_minimum_required(VERSION 3.8)
project(motiodom)
find_package(ament_cmake_auto REQUIRED)
ament_auto_find_build_dependencies()

ament_auto_add_library(motiodom_ekf src/ekf.cpp include/motiodom/ekf.hpp)
ament_auto_add_library(motiodom_vgf src/voxel_grid_filter.cpp include/motiodom/voxel_grid_filter.hpp)
ament_auto_add_library(motiodom_icp src/icp.cpp include/motiodom/icp.hpp)
ament_auto_add_executable(motiodom src/motiodom.cpp)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()
install(DIRECTORY launch config DESTINATION share/${PROJECT_NAME})
ament_auto_package()